@startuml
!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml
'https://plantuml.com/class-diagram

package classes_used_in_multiple_packages {
class FileReader {
- filePath: string
+ setFilePath(newFilePath)
+ getFilePath()
+ getStrings()
+ readFile()
}
}

package ex41.base {
class App {
+ main()
+ generateOutputString()
+ printOutput()
}

class nameSorter {
+ sort(names)
+ getSortedNames()
}

file "exercise41_input.txt" {
}
}

App o--> nameSorter
nameSorter o--> FileReader
FileReader o--> exercise41_input.txt
@enduml